# why3-semantics

./: .gitignore  .gitmodules  AxiomEval.v  CoqMakefile.local  LICENSE  Makefile  README.md  _CoqProject  dune-project  to_copy.txt  update_ocaml.sh
.github/workflows/: rocq-ci.yml
extract/: BigInt.ml  BigInt.mli  CoercionExtra.ml  CoercionImports.ml  Compute.ml  Compute.mli  ConstantExtra.ml  ConstantImports.ml  Ctr.mli  DeclExn.ml  DeclExtra.ml  DeclImports.ml  Driver.ml  EliminateAlgebraicExtra.ml  EliminateAlgebraicImports.ml  EliminateAlgebraicPrelude.ml  EliminateDefinitionExtra.ml  EliminateDefinitionImports.ml  EliminateInductiveExtra.ml  EliminateInductiveImports.ml  Exthtbl2.mli  Extract.v  IdentExtra.ml  IdentImports.ml  Libencoding.ml  LocExtra.ml  NumberImports.ml  PatternExn.ml  PatternExtra.ml  PatternImports.ml  Printer.ml  README.md  TaskExn.ml  TaskExtra.ml  TaskImports.ml  TermExn.ml  TermExtra.ml  TermImports.ml  TheoryExn.ml  TheoryExtra.ml  (+42 more)
lib/: Algebra.v  Lib_Algebra.v  Lib_Bintree.v  Lib_Int.v  Lib_List.v  Lib_Option.v  Lib_Relations.v  README.md  StdLib.v  Verif_Algebra.v  Verif_Bintree.v  Verif_Int.v  Verif_List.v  Verif_Option.v  Verif_Relations.v  dune
ocaml/: BigInt.mli  dune
proofs/: README.md  Term.v  Ty.v  Util.v  dune
proofs/ADT/: ADT.v  ADTTest.v  ADTUtil.v
proofs/Hlist/: Cast.v  Hlist.v  HlistUtil.v
proofs/common/: #AssocList.v#  AssocList.v  Common.v  CommonBool.v  CommonList.v  CommonOption.v  CommonSSR.v  CommonTactics.v  ListSet.v  Tactics2.v  amap.v  aset.v  countable.v  gmap.v  mapset.v  pmap.v  strings.v  zmap.v
proofs/core/: ADTAlt.v  ADTFullProps.v  ADTInd.v  ADTInterp.v  ADTIso.v  ADTSpec.v  Alpha.v  AssocList.v  Cast.v  Common.v  CommonSSR.v  Context.v  Denotational.v  Denotational2.v  Domain.v  Exhaustive.v  FullInterp.v  FullInterpConstr.v  GenElts.v  Hlist.v  IndProp.v  IndPropLemmas.v  IndPropTest.v  IndTypes.v  Interp.v  Interp2.v  Logic.v  NonRecFun.v  Pattern.v  Pattern.v.crashcoqide  PatternProofs.v  README.md  RecFun.v  RecFun2.v  RecFunLemmas.v  SSRex.v  Semantics.v  SubAlt.v  SubMulti.v  Substitution.v  (+15 more)
proofs/core/proofsystem/: Notations.v
proofs/proofsystem/: Compat.v  Induction.v  MatchSimpl.v  NatDed.v  Notations.v  ProofSystem.v  README.md  Rewrite.v  Shallow.v  Tactics.v  Unfold.v  Util.v
proofs/transform/: FullSubstitution.v  README.md  compile_match.v  eliminate_algebraic.v  eliminate_algebraic_proofs.v  eliminate_definition.v  eliminate_inductive.v  eliminate_let.v
proofs/transform/eliminate_algebraic_proofs/: eliminate_algebraic_context.v  eliminate_algebraic_interp.v  eliminate_algebraic_proofs.v  eliminate_algebraic_semantics.v  eliminate_algebraic_typing.v
src/: README.md  dune
src/coqutil/: CoqBigInt.v  CoqCtr.v  CoqHashtbl.v  CoqInt.v  CoqUtil.v  Ctr.v  IntFuncs.v  Integer.v  Monad.v  Monads.v  PmapExtra.v  State.v  StateHoareMonad.v  StateMonad.v
src/core/: CoercionDefs.v  DeclDefs.v  DeclFuncs.v  DeclProofs.v  Ident.v  IdentDefs.v  PatternAux.v  PatternComp.v  TaskDefs.v  TaskFuncs.v  TermDefs.v  TermFuncs.v  TermTraverse.v  TermTraverseAux.v  TheoryDefs.v  TheoryFuncs.v  TransDefs.v  Ty.v  TyDefs.v  TyFuncs.v
src/proofs/: ElimLet.v  ErrStateHoare.v  README.md  RelationProofs.v  Relations.v  Soundness.v  StateHoareMonad.v  StateInvar.v
src/proofs/ElimLet/: BindingProofs.v  ElimLet.v  StatefulSubstitutionProofs.v  SubAlpha.v  SubstUnsafeProofs.v  SubstitutionProofs.v  TermVars.v
src/trans/: eliminate_inductive.v
src/transform/: EliminateAlgebraic.v  EliminateDefinition.v  EliminateInductive.v
src/util/: ConstantDefs.v  CoqBigInt.v  CoqExthtbl.v  CoqInt.v  CoqNumber.v  CoqUtil.v  CoqWeakhtbl.v  CoqWstdlib.v  Ctr.v  ErrorMonad.v  Exthtbl.v  Extmap.v  Extset.v  Hashcons.v  Hashtbl.v  IntFuncs.v  Loc.v  LocTy.v  Number.v  NumberDefs.v  NumberFuncs.v  StateMonad.v  Weakhtbl.v  Wstdlib.v  extmap.v  extset.v  hashcons.v
test/: InductionTest.v  PolyTest.v  SimplMatchTest.v  TheoryTest.v  UnfoldTest.v  ZipTest.v  dune
